# twin-gcp

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  errors.py  main.py  prompt.py  schemas.py
backend/app/routes/: chat.py  health.py
backend/app/services/: gemini_client.py  memory_store.py
backend/data/: facts.json  style.txt  summary.txt
backend/tests/: conftest.py  test_chat.py  test_gemini_client.py
docs/: GUIDE.md
frontend/: next.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: twin.tsx
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
